--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
-    "cypress": "^8.5.0"
+    "cypress": "^8.5.0",
+    "webpack-merge": "^5.8.0"
   }
 }
