--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cypress/react": "^5.10.1",
+    "@cypress/webpack-dev-server": "^1.6.0",
     "@hookform/resolvers": "^2.8.1",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.2",
@@ -22,7 +24,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-yup": "^1.23.0",
-    "typescript": "^4.1.2",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
