--- a/backendShop/src/main/resources/application.properties
+++ b/backendShop/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=webShop1021
+#verbindung zu db macht hibernate
+spring.jpa.hibernate.ddl-auto=update
